--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -1,4 +1,4 @@
-name: build
+name: master
 
 on: [ push ]
 
@@ -20,4 +20,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          mvn -q deploy
+          git config user.email "actions@github.com"
+          git config user.name "GitHub Actions"
+          git pull
+          mvn -q -s settings.xml -B release:prepare release:perform
