--- a/pom.xml
+++ b/pom.xml
@@ -1,32 +1,37 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
   <artifactId>wutsi-platform-core</artifactId>
   <groupId>com.wutsi</groupId>
-  <version>0.0.4</version>
+  <version>0.0.5-SNAPSHOT</version>
   <packaging>jar</packaging>
 
   <name>wutsi-platform-core</name>
 
   <properties>
-    <jacoco-maven-plugin.version>0.8.5</jacoco-maven-plugin.version>
     <jacoco.threshold.line>0.86</jacoco.threshold.line>
     <jacoco.threshold.class>0.86</jacoco.threshold.class>
 
     <amqp-client.version>5.13.0</amqp-client.version>
-    <aws.version>1.11.750</aws.version>
+    <aws.version>1.12.47</aws.version>
     <feign.version>11.6</feign.version>
-    <jackson.version>2.12.3</jackson.version>
+    <jackson.version>2.12.4</jackson.version>
+    <javax.servlet.version>4.0.1</javax.servlet.version>
     <junit.version>5.7.2</junit.version>
     <klint.version>0.42.1</klint.version>
     <kotlin.version>1.5.21</kotlin.version>
     <kotlin-ktlint.version>0.38.1</kotlin-ktlint.version>
     <kotlin-mockito.version>2.2.0</kotlin-mockito.version>
-    <javax.servlet.version>4.0.1</javax.servlet.version>
-    <slf4j.version>1.7.29</slf4j.version>
-    <spring.version>5.3.8</spring.version>
-    <spring-boot.version>2.3.4.RELEASE</spring-boot.version>
+    <maven-antrun-plugin.version>3.0.0</maven-antrun-plugin.version>
+    <maven-exec-plugin.version>3.0.0</maven-exec-plugin.version>
+    <maven-failsafe-plugin.version>2.22.2</maven-failsafe-plugin.version>
+    <maven-jacoco-plugin.version>0.8.7</maven-jacoco-plugin.version>
+    <maven-surefire-plugin.version>2.22.2</maven-surefire-plugin.version>
+    <slf4j.version>1.7.32</slf4j.version>
+    <spring.version>5.3.9</spring.version>
+    <spring-boot.version>2.5.3</spring-boot.version>
     <xmemcached.version>2.4.5</xmemcached.version>
 
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -36,12 +41,11 @@
 
   <scm>
     <developerConnection>scm:git:https://github.com/wutsi/wutsi-platform-core.git</developerConnection>
-    <tag>wutsi-platform-core-0.0.4</tag>
+    <tag>HEAD</tag>
   </scm>
   <distributionManagement>
     <repository>
       <id>github</id>
-      <name>GitHub Maven Packages</name>
       <url>https://maven.pkg.github.com/wutsi/wutsi-platform-core</url>
     </repository>
   </distributionManagement>
@@ -194,16 +198,16 @@
       </plugin>
       <plugin>
         <artifactId>maven-surefire-plugin</artifactId>
-        <version>2.22.2</version>
+        <version>${maven-surefire-plugin.version}</version>
       </plugin>
       <plugin>
         <artifactId>maven-failsafe-plugin</artifactId>
-        <version>2.22.2</version>
+        <version>${maven-failsafe-plugin.version}</version>
       </plugin>
       <plugin>
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>exec-maven-plugin</artifactId>
-        <version>1.6.0</version>
+        <version>${maven-exec-plugin.version}</version>
         <configuration>
           <mainClass>MainKt</mainClass>
         </configuration>
@@ -214,18 +218,19 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-antrun-plugin</artifactId>
-        <version>1.7</version>
+        <version>${maven-antrun-plugin.version}</version>
         <executions>
           <execution>
             <id>ktlint</id>
             <phase>validate</phase>
             <configuration>
               <target name="ktlint">
-                <java taskname="ktlint" dir="${basedir}" fork="true" failonerror="true" classname="com.pinterest.ktlint.Main" classpathref="maven.plugin.classpath">
-                  <arg value="src/**/*.kt" />
+                <java taskname="ktlint" dir="${basedir}" fork="true" failonerror="true" classname="com.pinterest.ktlint.Main"
+                      classpathref="maven.plugin.classpath">
+                  <arg value="src/**/*.kt"/>
                   <!-- to generate report in checkstyle format prepend following args: -->
-                  <arg value="--reporter=plain" />
-                  <arg value="--reporter=checkstyle,output=${project.build.directory}/ktlint.xml" />
+                  <arg value="--reporter=plain"/>
+                  <arg value="--reporter=checkstyle,output=${project.build.directory}/ktlint.xml"/>
 
                   <!-- see https://github.com/pinterest/ktlint#usage for more -->
                 </java>
@@ -239,9 +244,10 @@
             <id>ktlint-format</id>
             <configuration>
               <target name="ktlint">
-                <java taskname="ktlint" dir="${basedir}" fork="true" failonerror="true" classname="com.pinterest.ktlint.Main" classpathref="maven.plugin.classpath">
-                  <arg value="-F" />
-                  <arg value="src/**/*.kt" />
+                <java taskname="ktlint" dir="${basedir}" fork="true" failonerror="true" classname="com.pinterest.ktlint.Main"
+                      classpathref="maven.plugin.classpath">
+                  <arg value="-F"/>
+                  <arg value="src/**/*.kt"/>
                 </java>
               </target>
             </configuration>
@@ -264,7 +270,7 @@
       <plugin>
         <groupId>org.jacoco</groupId>
         <artifactId>jacoco-maven-plugin</artifactId>
-        <version>0.8.2</version>
+        <version>${maven-jacoco-plugin.version}</version>
         <executions>
           <execution>
             <id>default-prepare-agent</id>
