--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 
   <artifactId>wutsi-platform-core</artifactId>
   <groupId>com.wutsi</groupId>
-  <version>0.0.82</version>
+  <version>0.0.83-SNAPSHOT</version>
   <packaging>jar</packaging>
   <name>wutsi-platform-core</name>
 
@@ -42,7 +42,7 @@
 
   <scm>
     <developerConnection>scm:git:https://github.com/wutsi/wutsi-platform-core.git</developerConnection>
-    <tag>wutsi-platform-core-0.0.82</tag>
+    <tag>HEAD</tag>
   </scm>
   <distributionManagement>
     <repository>
