--- a/pom.xml
+++ b/pom.xml
@@ -42,7 +42,7 @@
 
   <scm>
     <developerConnection>scm:git:https://github.com/wutsi/wutsi-platform-core.git</developerConnection>
-    <tag>wutsi-platform-core-0.0.119</tag>
+    <tag>HEAD</tag>
   </scm>
   <distributionManagement>
     <repository>
